--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,14 +1,17 @@
 <p style="color: green"><%= notice %></p>
 
 <h1>Users</h1>
-
-<div id="users">
+<table>
+  <tr>
+    <th><%= link_to "Non Black User", :sort => "non_black"%> </th>
+    <th><%= link_to "Black User", :sort => "black"%> </th>
+    <th><%= link_to "All User", :sort => "all"%> </th>
+  </tr>
   <% @users.each do |user| %>
-    <%= render user %>
-    <p>
-      <%= link_to "Show this user", user %>
-    </p>
+    <tr>
+      <td><%= render user %></td>
+    </tr>
   <% end %>
-</div>
+</table>
 
 <%= link_to "New user", new_user_path %>
