--- a/app/views/users/blacklist.html.erb
+++ b/app/views/users/blacklist.html.erb
@@ -1,6 +1,11 @@
 <p style="color: green"><%= notice %></p>
 
 <h1>Black List Users</h1>
+<%= form_tag search_path, :method => "get" do %>
+  <%= label_tag(:number, "Search your number : ")%>
+  <%= text_field_tag :number, params[:number] %>
+  <%= submit_tag("Search") %>
+<% end %>
 
 <div id="users">
   <% @users.each do |user| %>
