--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,10 @@
 
 <%= link_to "BlackList", black_list_path %>
 
+<%= form_with url: import_users_path, method: :post do |form| %>
+  <%= form.file_field :file, accept: ".csv" %>
+  <%= form.button "Import" %>
+<% end %>
 
 <h1>Users List</h1>
 <table>
